Bug 1577275 - Make |simpleMeasureUnits| |static constexpr| to make some C++17-anticipating constexpr code work.  r=anba

Differential Revision: https://phabricator.services.mozilla.com/D43821